# mentions

./: .gitignore  AGENTS.md  ARCHITECTURE_CHECKPOINT_2026-04-18.md  BLOCK_A_INTERMEDIATE_CHECKPOINT_2026-04-18.md  BLOCK_B_CHECKPOINT_2026-04-18.md  BLOCK_CF_QUALITY_MILESTONE_2026-04-18.md  BLOCK_C_INTERMEDIATE_CHECKPOINT_2026-04-18.md  BLOCK_D_CHECKPOINT_2026-04-18.md  BLOCK_E_INTERMEDIATE_CHECKPOINT_2026-04-18.md  BLOCK_F_INTERMEDIATE_CHECKPOINT_2026-04-18.md  BLOCK_G_CHECKPOINT_2026-04-18.md  BLOCK_G_COMPAT_INVENTORY_2026-04-18.md  BOOTSTRAP.md  DEVELOPMENT.md  FRAMEWORK_COVERAGE_MAP_2026-04-18.md  IDENTITY.md  MANUAL_TRANSCRIPT_INTAKE.md  MIGRATION.md  MODULAR_ARCHITECTURE_ROADMAP.md  NEWS_SOCIAL_SOURCE_STACK.md  NOTES.md  PHASE_A_STATUS.md  README.md  RETRIEVAL_ANALYSIS_CONTRACTS.md  ROADMAP.md  RSS_SOURCE_STACK.md  SOUL.md  TOOLS.md  TRANSCRIPT_TAGGING_SPEC.md  V1_READINESS.md  V1_SPEC.md  env.example  index.html  metadata.json  pyproject.toml  requirements.txt
docs/: README.md  index.html
gateway/: README.md  openclaw.local.example.json5  run-local-gateway.sh
legacy/: README.md
mentions_core/: __init__.py  __main__.py  cli.py
mentions_domain/: __init__.py  contracts.py  normalize.py
openclaw-workspace/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md  mentions-agent
scripts/: export_workspace_payload.py  intake_trump_archive.py  smoke_retrieval.py  smoke_speaker_url.py  smoke_text_query.py
tests/: conftest.py  test_analysis.py  test_analysis_engine_module.py  test_analysis_engine_v2.py  test_anti_patterns.py  test_bootstrap_checks.py  test_calibration.py  test_challenge_layer.py  test_chunk_canonical_attribution.py  test_chunker.py  test_cli.py  test_continuity_v4.py  test_counterfactual.py  test_db_pragmas.py  test_embed_cache.py  test_eval_compare_paths.py  test_eval_harness.py  (+77 more)
(+418 files in other folders)
