[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mentions-core"
version = "0.3.0"
description = "Local Mentions runtime and tooling, designed to be mounted behind OpenClaw Gateway."
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[project.scripts]
mentionsctl = "mentions_core.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["mentions_core*", "agents*", "library*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
