[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mentions-core"
version = "0.14.7"
description = "Local Mentions runtime and tooling for prediction-market research."
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[project.scripts]
mentionsctl = "mentions_core.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
web = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
]

[tool.setuptools.packages.find]
include = ["mentions_core*", "agents*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
